--- a/index.html
+++ b/index.html
@@ -1,38 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>API Interaction Project</title>
+const fetchButton = document.getElementById('fetchButton');
+const postList = document.getElementById('postList');
+const errorDiv = document.getElementById('error');
 
-</head>
-<body>
-    <h1>JSON API Explorer</h1>
-    
-    <section>
-        <h2>Create New Post</h2>
-        <form id="postForm">
-            <div>
-                <label for="titleInput">Title:</label>
-                <input type="text" id="titleInput" name="title" required>
-            </div>
-            <div>
-                <label for="bodyInput">Body:</label>
-                <textarea id="bodyInput" name="body" rows="4" required></textarea>
-            </div>
-            <button type="submit">Submit Post</button>
-        </form>
-        <div id="formError"></div>
-        <div id="formSuccess"></div>
-    </section>
+fetchButton.addEventListener('click', () => {
+  postList.innerHTML = 'Loading posts...';
+  errorDiv.textContent = '';
 
-    <section>
-        <h2>Posts</h2>
-        <button id="fetchButton">Fetch Posts</button>
-        <div id="error"></div>
-        <div id="postList"></div>
-    </section>
-
-    <script src="script.js"></script>
-</body>
-</html>
+  fetch('https://jsonplaceholder.typicode.com/posts')
+    .then(response => {
+      if (!response.ok) throw new Error('Failed to fetch posts');
+      return response.json();
+    })
+    .then(posts => {
+      postList.innerHTML = ''; // Clear loading
+      posts.forEach(post => {
+        const postDiv = document.createElement('div');
+        postDiv.innerHTML = `<h3>${post.title}</h3><p>${post.body}</p><hr>`;
+        postList.appendChild(postDiv);
+      });
+    })
+    .catch(error => {
+      errorDiv.textContent = 'Error: ' + error.message;
+      postList.innerHTML = '';
+    });
+});
